Initial changes for public api

--- a/src/Assets/packages.config
+++ b/src/Assets/packages.config
@@ -11,7 +11,7 @@
   <package id="OSK.Functions.Outputs.Logging.Abstractions" version="2.2.0" />
   <package id="OSK.Hexagonal.Abstractions" version="0.5.0" />
   <package id="OSK.Hexagonal.MetaData" version="1.0.0" />
-  <package id="OSK.Inputs" version="0.0.1-beta005" manuallyInstalled="true" />
+  <package id="OSK.Inputs" version="0.0.1" manuallyInstalled="true" />
   <package id="System.ComponentModel.Annotations" version="5.0.0" />
   <package id="System.Diagnostics.DiagnosticSource" version="9.0.4" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" />
